add degree link

--- a/components/home/home.html
+++ b/components/home/home.html
@@ -100,7 +100,7 @@
                                             <div class="d-flex">
                                                 <img class="avatar avatar-sm" src="{{degree.image}}"
                                                     alt="Image Description">
-                                                <div class="ms-3">
+                                                <a class="ms-3" href="{{degree.link}}">
                                                     <h5 class="mb-0">
                                                         {{degree.title}}
                                                     </h5>
