--- a/components/project/projects.html
+++ b/components/project/projects.html
@@ -85,7 +85,7 @@
                         <!-- Avatar Group -->
                         <div class="avatar-group avatar-group-xs avatar-circle">
                             <span ng-repeat="member in project.members track by $index" class="avatar avatar-soft-dark" data-bs-toggle="tooltip"
-                                data-bs-placement="top" title="Antony Taylor">
+                                data-bs-placement="top" title="{{member}}">
                                 <span class="avatar-initials">{{member[0]}}</span>
                             </span>
                         </div>
