--- a/components/comingsoon.html
+++ b/components/comingsoon.html
@@ -1,8 +1,31 @@
-<div class="row justify-content-sm-center text-center py-10" style="position: absolute; width: 100%; transform: translate(0, 100%);">
-    <div class="col-sm-7 col-md-5">
-        <h1>Coming Soon</h1>
-        <p>Something exciting is on the way!</p>
+<style>
+    .code {
+        margin: auto;
+        /* background: #f6f6f6; */
+        padding: 30px;
+        /* height: calc(100vh - 3.75rem - 3.875rem); */
+    }
 
-        <a class="btn btn-primary" href="#!/">Home</a>
+    pre code.hljs {
+        border-radius: 10px;
+        font-size: 18px;
+        font-weight: 600;
+        white-space: pre-wrap;
+    }
+
+    pre {
+        /* margin: 0; */
+        display: flex;
+        flex-direction: column;
+    }
+</style>
+
+<h1 class="fs-1 text-center mb-4">My xQuery library</h1>
+<div class="code">
+    <div ng-repeat="document in documents track by $index">
+        <div class="fw-bold mb-4" ng-bind-html="document.text"></div>
+        <pre ng-show="document.code != ''">
+            <code class="language-js" highlight-code ng-bind="document.code"></code>
+        </pre>
     </div>
 </div>
