fix collapse issue and coming soon page

--- a/components/customizations/customizations.html
+++ b/components/customizations/customizations.html
@@ -20,7 +20,7 @@
     }
 </style>
 
-<h1 class="fs-1 text-center mb-4">My xQuery library</h1>
+<h1 class="fs-1 text-center mb-4">My {{title}} library</h1>
 <div class="code">
     <div ng-repeat="document in documents track by $index">
         <div class="fw-bold mb-4" ng-bind-html="document.text"></div>
