add cv and more features for xQuery

--- a/components/courses/courses.html
+++ b/components/courses/courses.html
@@ -26,7 +26,7 @@
             aria-controls="{{flag}}"
             aria-selected="true"
         >
-            <span class="fs-badge-primary fw-semibold rounded-pill px-2 py-1">{{courses.length}}</span>
+            <!-- <span class="fs-badge-primary fw-semibold rounded-pill px-2 py-1">{{courses.length}}</span> -->
             <span>{{flag}}</span>
         </button>
     </li>
