--- a/components/home/home.html
+++ b/components/home/home.html
@@ -51,12 +51,12 @@
 
                 <!-- Card -->
                 <div class="js-sticky-block card mb-3 mb-lg-5" data-hs-sticky-block-options='{
-                 "parentSelector": "#accountSidebarNav",
-                 "breakpoint": "lg",
-                 "startPoint": "#accountSidebarNav",
-                 "endPoint": "#stickyBlockEndPoint",
-                 "stickyOffsetTop": 20
-               }'>
+                    "parentSelector": "#accountSidebarNav",
+                    "breakpoint": "lg",
+                    "startPoint": "#accountSidebarNav",
+                    "endPoint": "#stickyBlockEndPoint",
+                    "stickyOffsetTop": 20
+                }'>
                     <!-- Header -->
                     <div class="card-header">
                         <h4 class="card-header-title">Profile</h4>
@@ -90,7 +90,12 @@
                                 class="table table-borderless table-thead-bordered table-nowrap table-align-middle card-table">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th>Certificate</th>
+                                        <th>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <span>Certificate</span>
+                                                <button class="btn btn-sm btn-dark text-uppercase shadow-none" onclick="downloadFileFromUrl()">Download CV</button>
+                                            </div>
+                                        </th>
                                     </tr>
                                 </thead>
 
@@ -101,10 +106,9 @@
                                                 <img class="avatar avatar-sm" src="{{degree.image}}"
                                                     alt="Image Description">
                                                 <a class="ms-3" href="{{degree.link}}">
-                                                    <h5 class="mb-0">
-                                                        {{degree.title}}
-                                                    </h5>
+                                                    <h5 class="mb-0">{{degree.title}}</h5>
                                                     <small>{{degree.year}}</small>
+                                                </a>
                                             </div>
                                         </td>
                                     </tr>
